# dataplane-sdk-rust

./: Cargo.toml  README.md
crates/sdk/: Cargo.toml
crates/sdk/src/core/: model.rs
crates/sdk/src/core/model/: data_address.rs  data_flow.rs  messages.rs
