[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.package]
license = "Apache-2.0"
edition = "2024"
version = "0.1.0"
authors = ["Enrico Risa <enrico.risa@gmail.com>"]


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bon = "3.3.2"
chrono = { version = "0.4.39", features = ["serde"]}

[workspace.lints.clippy]
unwrap_used = "deny"
